[B]Version 1.1.39[/B]
xnxx - fix categories
erogarga - fix pagination & playback
Chaturbate transexual directory fix
camwhoresbay - new site