@@ -1,0 +1,3 @@
+Site URL: https://voyeur-house.life/
+DMCA: https://voyeur-house.life/static/dmca
+Contact: https://voyeur-house.life/feedback
